solve letter cutoff

--- a/src/AtomComponent/ExtraSmallButton/style.scss
+++ b/src/AtomComponent/ExtraSmallButton/style.scss
@@ -1,7 +1,7 @@
 .extra-small-button {
   display: inline-block;
   height: 30px;
-  padding: 0 3%;
+  padding: 0 14px;
   text-align: center;
   line-height: 30px;
   font-size: 0.8rem;
