--- a/src/AtomComponent/ExtraSmallLink/style.scss
+++ b/src/AtomComponent/ExtraSmallLink/style.scss
@@ -4,7 +4,7 @@
 }
 .extra-small-link-button {
   height: 30px;
-  padding: 0 3%;
+  padding: 0 14px;
   text-align: center;
   line-height: 30px;
   letter-spacing: 0.01px;
