--- a/src/AtomComponent/LargeLink/style.scss
+++ b/src/AtomComponent/LargeLink/style.scss
@@ -5,7 +5,7 @@
 
 .large-link-button {
   height: 60px;
-  padding: 0 9%;
+  padding: 0 44px;
   text-align: center;
   line-height: 60px;
   letter-spacing: 0.01px;
