--- a/src/AtomComponent/MediumLink/style.scss
+++ b/src/AtomComponent/MediumLink/style.scss
@@ -5,7 +5,7 @@
 
 .medium-link-button {
   height: 50px;
-  padding: 0 7%;
+  padding: 0 34px;
   text-align: center;
   line-height: 50px;
   letter-spacing: 0.01px;
