--- a/src/AtomComponent/PrimaryText/style.scss
+++ b/src/AtomComponent/PrimaryText/style.scss
@@ -1,5 +1,5 @@
 .primary-text {
-  font-size: 2rem;
+  font-size: 1.75rem;
   font-weight: 700;
   color: #FFFFFF;
   letter-spacing: 0.02px;
