--- a/src/AtomComponent/SmallButton/style.scss
+++ b/src/AtomComponent/SmallButton/style.scss
@@ -1,7 +1,7 @@
 .small-button {
   display: inline-block;
   height: 40px;
-  padding: 0 5%;
+  padding: 0 24px;
   text-align: center;
   line-height: 40px;
   font-size: 1.0rem;
